--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/routers": "^7.5.3",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@react-three/rapier": "^2.2.0",
     "expo": "~54.0.32",
     "expo-asset": "~12.0.12",
+    "expo-dev-client": "~6.0.20",
     "expo-gl": "~16.0.9",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
