--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "three": "^0.182.0",
-    "three-mesh-bvh": "^0.8.3"
+    "three-mesh-bvh": "^0.8.3",
+    "three-stdlib": "^2.36.1"
   },
   "devDependencies": {
     "@gltf-transform/cli": "^4.3.0",
