--- a/package.json
+++ b/package.json
@@ -35,5 +35,11 @@
     "meshoptimizer": "^1.0.1",
     "typescript": "~5.9.2"
   },
-  "private": true
+  "private": true,
+  "overrides": {
+    "three": "^0.182.0",
+    "stats-gl": {
+      "three": "^0.182.0"
+    }
+  }
 }
