WIP: debug texture loading + loader URL logging (broken textures)

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-config": "~54.0.14",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/core": "^7.14.0",
     "@react-navigation/native": "^7.1.28",
@@ -20,6 +21,7 @@
     "expo": "~54.0.32",
     "expo-asset": "~12.0.12",
     "expo-dev-client": "~6.0.20",
+    "expo-file-system": "~19.0.21",
     "expo-gl": "~16.0.9",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
@@ -30,6 +32,7 @@
     "three-mesh-bvh": "^0.8.3"
   },
   "devDependencies": {
+    "@expo/metro-config": "^54.0.14",
     "@gltf-transform/cli": "^4.3.0",
     "@types/react": "~19.1.0",
     "meshoptimizer": "^1.0.1",
